test/sql/collate/test_unsupported_collations.test
# name: test/sql/collate/test_unsupported_collations.test
# description: Test unsupported collations
# group: [collate]

# unrecognized collation
statement error
CREATE TABLE collate_test(s VARCHAR COLLATE blabla)
----
Catalog Error: Collation with name blabla does not exist!
Did you mean "nfc"?

# non-varchar columns cannot have collations
statement error
CREATE TABLE collate_test(s INTEGER COLLATE blabla)
----
Parser Error: Only VARCHAR columns can have collations!

# cannot combine these collations
statement error
CREATE TABLE collate_test(s VARCHAR COLLATE NOACCENT.NOACCENT)
----
Binder Error: Cannot combine collation types "noaccent" and "noaccent"

statement error
CREATE TABLE collate_test(s VARCHAR COLLATE 1)
----
Parser Error: syntax error at or near "1"
LINE 1: ...E TABLE collate_test(s VARCHAR COLLATE 1)
                                                  ^

statement error
CREATE TABLE collate_test(s VARCHAR COLLATE 'hello')
----
Parser Error: syntax error at or near "'hello'"
LINE 1: ...E TABLE collate_test(s VARCHAR COLLATE 'hello')
                                                  ^

statement error
PRAGMA default_collation='blabla'
----
PLACEHOLDER_ERROR_MESSAGE1402

